# language-learning

./: .env.example  .gitignore  Dockerfile  Dockerfile.bot  LICENSE  README.md  bot_entrypoint.sh  crontab  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/lt/: README.md
extra_vocab/: dreaming_spanish.txt  simple_and_irregular_verbs.txt
src/: calc_anki_json_stats.py  export_anki_snapshot.py  extract_from_anki.py  extract_from_anki_repackage_prompt.txt  extract_from_transcrib_vocab.py  extract_from_vocab_repackage_prompt.txt  extract_vocab_from_transcripts.py  llm.py  make_anki_deck.py  transcribe_folder.py  vocab_extract_prompt.txt
src/bbc_noticias/: bot.py  config.py  discord_bot.py  llm.py  notifier.py  prompts.py  queue.py  queue_service.py  rss.py  scraper.py  selector.py  sent_stories.py  simplifier.py  story_service.py  telegram_bot.py
src/bbc_noticias/adapters/: __init__.py  base.py  discord.py  telegram.py
tests/: conftest.py  test_all.py  test_config.py  test_imports.py  test_rss.py  test_runner.py  test_scraper.py  test_sent_stories.py  test_unit.py
