[project]
name = "language-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "better-exchook>=1.20260303.161200",
    "discord.py>=2.5.0",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F", "E", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B028", "N802", "N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
